--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -2,17 +2,16 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    flex-direction: row;
-    background: blueviolet;
+    flex-direction: column;
+    background: #E5E5E5;
 }
-.left{
-    width: 50%;
-    height: 100%;
-    background: chartreuse;
+.designImg{
+    width: 25vw;
+    height: 56vh;
 }
-.right{
-    width: 50%;
-    height: 100%;
-    background: burlywood;
+.boxImg{
+    text-align: center;
 }
-
+.burgerQueen{
+    font-size: 45px;
+}
