add summary of products in the page chef

--- a/src/components/menu/styleMenu.css
+++ b/src/components/menu/styleMenu.css
@@ -39,3 +39,11 @@
 .barrasOption{
     width: 100%;
 }
+.containerButtonMenu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.boxButton{
+    margin: 10px;
+}
